<resources>
    <string name="app_name">AppGym</string>
    <string name="calcular_repeticion_xima">Calcular repetición máxima</string>

    <string name="crear_rutina">Crear rutina</string>
    <string name="rutinas">Rutinas</string>
    <string name="emp_entr">+ Empezar Entrenamiento Vacío</string>
    <string name="nueva_rutina">Nueva Rutina</string>
    <string name="explorar">Explorar</string>
    <string name="peso_kg">Peso (KG)</string>
    <string name="numero_de_repeticiones">Numero de repeticiones</string>
    <string name="rm">RM</string>
    <string name="anuncio">Anuncio</string>
    <string name="Anuncio_Texto">\"Si eres nuevo en el gimnasio, es importante esperar unos meses antes de intentar calcular tu RM (Repetición Máxima). Tu cuerpo está en proceso de adaptación al ejercicio. SOLO CALCULA PARA PRESS BANCA, SENTADILLA, PESO MUERTO</string>
    <string name="crea_la_rutina">Crea la rutina</string>
    <string name="titulo">Título de la rutina</string>
    <string name="agregar">Empieza agregando un ejercicio a tu rutina</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicio_r_pido">Inicio Rápido</string>
    <string name="confirmar_act">Confirmar</string>
    <string name="btco">Confirmar</string>
    <string name="po">¿Cuál es tu objetivo?</string>
    <string name="btae">Añadir ejercicio</string>
    <string name="txtde">Tipo de ejercicio</string>
    <string name="tom">Otros músculos (opcional)</string>
    <string name="txgmp">Grupo muscular primario</string>
    <string name="txeq">Equipamiento</string>
    <string name="tnde">Nombre del ejercicio</string>
    <string name="txai">Añadir imagen</string>
    <string name="btcan">Cancelar</string>
    <string name="btgr">Guardar</string>
    <string name="txbtae">+ Agregar ejercicio</string>
    <string name="correotxt">Correo electronico</string>
    <string name="contxt">Contraseña</string>
    <string name="txtbis">Iniciar sesion</string>
    <string name="txtbregist">Registrarse</string>
    <string name="txtbtregistro">Regitrarse</string>
    <string name="txtbtcalc">Calcular</string>
    <string name="txtconfc">Confirmar contraseña</string>
    <string name="conttxt">Contraseña</string>
    <string name="corrtxt">Correo electronico</string>
    <string name="edadtxt">Edad</string>
    <string name="apelltxt">Apellido</string>
    <string name="nombtxt">Nombre</string>
    <string name="eligini">Elige la opcion a la que quieres acceder</string>
    <string name="crearrutina">Crear rutina</string>
    <string name="resultado_imc">Tu IMC es: %.2f</string>
    <string name="error_altura_cero" />
    <string name="error_campos_vacios" />
    <string name="error_formato_invalido" />
    <string name="bajo_peso">Bajo peso (IMC &lt; 18.5)</string>
    <string name="peso_normal">Peso normal (IMC entre 18.5 y 24.9)</string>
    <string name="sobrepeso">Sobrepeso (IMC entre 25 y 29.9)</string>
    <string name="obesidad">Obesidad (IMC de 30 o más)</string>
    <string name="categoria_imc">Categoría IMC: %s</string>
    <string name="Perderpeso">Perder peso</string>
    <string name="Disminuyeturequerimientocaloricoun20">Disminuye tu requerimiento calorico un 20%</string>
    <string name="Perderpesolentamente">Perder peso lentamente </string>
    <string name="Disminuyeturequerimientocaloricoun10">Disminuye tu requerimiento calorico un 10</string>
    <string name="Mantenerpeso">Mantener peso</string>
    <string name="Nomodificaturequerimientocalorico">No modifica tu requerimiento calorico</string>
    <string name="Aumentarpesolentamente">Aumentar peso lentamente</string>
    <string name="Aumentaturequerimientocaloricoun10">Aumenta tu requerimiento calorico un 10</string>
    <string name="Aumentarpeso">Aumentar peso</string>
    <string name="Aumentaturequerimientocaloricoun20">Aumenta tu requerimiento calorico un 20</string>
    <string name="boton_confirmar">Confirmar</string>
    <string name="pe">¿Que tanta actividad realizas?</string>
    <string name="Bajo">Bajo</string>
    <string name="Pocoonadaejercicio">Poco o nada ejercicio</string>
    <string name="Moderado">Moderado</string>
    <string name="Ejercicioslivanos1a3vecesporsemana">Ejercicios livanos 1 a 3 veces por semana</string>
    <string name="Alto">Alto</string>
    <string name="Ejerciciomoderadodeporte3a5vecesporsemana">Ejercicio moderado,deporte 3 a 5 veces por semana</string>
    <string name="Muyalto">Muy alto</string>
    <string name="Ejercicio6a7vecesporsemana">Ejercicio 6 a 7 veces por semana</string>
    <string name="Hiperactivo">Hiperactivo</string>
    <string name="Ejercicioydeportemasde2horastodoslosdias">Ejercicio y deporte mas de 2 horas todos los dias</string>
    <string name="botn_confirmar">Confirmar</string>
    <string name="agrega_el_ejercicio">Agrega el ejercicio</string>
    <string name="nombre_del_ejercicio">Nombre del ejercicio</string>
    <string name="a_adir">Añadir</string>
</resources>