<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/david"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:onClick="irlogin"
            android:src="@drawable/baseline_arrow_back_24"
            tools:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registrarse"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/nombtxt"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FDFDFD"
            android:textColorLink="#FFFFFF" />

        <EditText
            android:id="@+id/tv_peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/apelltxt"
            android:inputType="text"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FAFAFA" />

        <EditText
            android:id="@+id/tv_sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/edadtxt"
            android:inputType="number"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/tv_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/corrtxt"
            android:inputType="textEmailAddress"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/conttxt"
            android:inputType="textPassword"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/txtconfc"
            android:inputType="textPassword"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/txtbtregistro"
            android:onClick="irlogin"
            android:textColorLink="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>